# 2DpotWell

./: .gitignore  CMakeLists.txt  Makefile_conflict-20180214-145404  README.md  potential.nb  projection.nb  sphHarmPlot.nb  todo.txt  wCent.nb  wf1.werr
Documentation/: 2dpotWell.aux  2dpotWell.tex  2dpotWell.tex.bak  2dpotWell.toc
intelAdvi/2DpoptWell/: 2DpoptWell.advixeproj
intelAdvi/2DpoptWell/e000/: e000.advixeexp
pyPlot/: myBandPlot.py
scripts/: bandMovie.py  fitPOL.py  gcutPLOT.py  movieMaker.py  myBandPlot.py  niuPlot.py  potwellInterface.py  probeB.sh  readOutput.py  readPOL.py  subStream.sh
scripts/exec/: input.txt  probeB.sh  probeGcut.sh  probeNsolve.sh  probeRashba.sh  subStream.sh
scripts/exec/paraSpace/: 3D_density_test.py  contour_test.py  conv_plot_w90.py  plot_2d_ParaSpace.py
scripts/exec/paraSpace/xPos0.61aR0.1/: input.txt
scripts/exec/paraSpace/xPos0.61aR0.2/: input.txt
scripts/exec/paraSpace/xPos0.61aR0.7/: input.txt
scripts/exec/paraSpace/xPos0.61aR0.8/: input.txt
scripts/exec/paraSpace/xPos0.61aR1.0/: input.txt
scripts/exec/paraSpace/xPos0.61aR1.6/: input.txt
scripts/exec/paraSpace/xPos0.61aR1.9/: input.txt
scripts/exec/paraSpace/xPos0.61aR2.2/: input.txt
scripts/exec/paraSpace/xPos0.61aR2.5/: input.txt
scripts/exec/paraSpace/xPos0.62aR0.0/: input.txt
scripts/exec/paraSpace/xPos0.62aR0.2/: input.txt
scripts/exec/paraSpace/xPos0.62aR0.6/: input.txt
scripts/exec/paraSpace/xPos0.62aR1.3/: input.txt
scripts/exec/paraSpace/xPos0.62aR1.6/: input.txt
scripts/exec/paraSpace/xPos0.62aR1.8/: input.txt
scripts/pyPlot/: anim_data.py  conv_plot_p1.py  conv_plot_w90.py  fitPOL.py  input.orig  plot_2d_ParaSpace.py  plot_Fit_Field.py  plot_UNK.py  plot_anim.py  plot_bandStruct.py  plot_cell.py  plot_nSolve.py  plot_niu_2dcolor.py  plot_niu_orbitals_2dcolor.py  plot_niu_tot_2dcolor.py  plot_pol.py  plot_wannSprd.py  util_2dPW_Interf.py  util_subDir_plots.py
src/: basisIO.f90  berry.f90  berryWF.f90  blochWf.f90  effTB.f90  gaugeTrafo.f90  hamMagnetic.f90  hamPWbasis.f90  hamPotWell.f90  hamSolver.f90  hamZeeman.f90  ham_magnetic.f90  ham_potWell.f90  ham_pwBasis.f90  ham_rashba.f90  ham_solver.f90  ham_zeeman.f90  input.f90  main.f90  mathematics.f90  output.f90  peierls.f90  planeWave.f90  polBerry.f90  polNiu.f90  pol_berry.f90  pol_niu.f90  polarization.f90  polarization0.f90  postW90.f90  potWellModel.f90  projection.f90  semiClassics.f90  sysPara.f90  tb_interp.f90  tb_interpolation.f90  tightBind.f90  todo.txt  utilBasisIO.f90  utilMath.f90  (+13 more)
tmp/: tmp.f90
(+361 files in other folders)
